#cmake_minimum_required(VERSION 2.8.9)
cmake_minimum_required(VERSION 3.0)
project (beehive)
add_executable(beehive beehive.cpp I2C.cpp TemperatureAndHumidity.cpp Pressure.cpp ReadI2CDevices.cpp Sensor.hpp CppTimer.h TimerEvent.cpp TimerEvent.hpp Fan.cpp Fan.hpp)
set (CMAKE_CXX_STANDARD 11)
find_package(Threads)
target_link_libraries(beehive wiringPi)
target_link_libraries (beehive ${CMAKE_THREAD_LIBS_INIT})
TARGET_LINK_LIBRARIES(beehive rt)
